--- a/templates/service_templates/redis.service.erb
+++ b/templates/service_templates/redis.service.erb
@@ -1,14 +1,15 @@
 [Unit]
-Description=Advanced key-value store
+Description=Advanced key-value store for <%= @title %>
 After=network.target
 
 [Service]
 Type=forking
 ExecStart=/usr/bin/redis-server <%= @redis_file_name %>
+ExecStop=/usr/bin/redis-server -p <%= @port %> shutdown
 TimeoutStopSec=0
 Restart=always
-User=redis
-Group=redis
+User=<%= @service_user %>
+Group=<%= @service_user %>
 
 [Install]
 WantedBy=multi-user.target
