--- a/templates/service_templates/redis.service.erb
+++ b/templates/service_templates/redis.service.erb
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 ExecStart=/usr/bin/redis-server <%= @redis_file_name %>
-ExecStop=/usr/bin/redis-server -p <%= @port %> shutdown
+ExecStop=/usr/bin/redis-server -p <%= @port %> shutdown <%= @service_name %>
 TimeoutStopSec=0
 Restart=always
 User=<%= @service_user %>
