Updates for EL6
* EPEL 6 version of Redis just jumped from 2.8 to 3.2, different location for starting binary
* Also update the template version
* Move /var/run directory into config
* https://bugzilla.redhat.com/show_bug.cgi?id=923970

--- a/templates/service_templates/redis.RedHat.erb
+++ b/templates/service_templates/redis.RedHat.erb
@@ -17,7 +17,7 @@
 . /etc/rc.d/init.d/functions
 
 name="redis-server-<%= @name %>"
-exec="/usr/sbin/redis-server"
+exec="/usr/bin/redis-server"
 pidfile="/var/run/redis/redis-server-<%= @name %>.pid"
 REDIS_CONFIG="<%= @redis_file_name %>"
 
