Added a extra_config_params for both redis and sentinel.
  This is to be able to set (for exaple) the myid setting
  in sentinel and to automaticly add peers from puppet.

Signed-off-by: Henry <h.paulissen@tmg.nl>

--- a/templates/redis.conf.2.8.erb
+++ b/templates/redis.conf.2.8.erb
@@ -738,3 +738,11 @@ hz <%= @hz %>
 # in order to commit the file to the disk more incrementally and avoid
 # big latency spikes.
 aof-rewrite-incremental-fsync <% if @aof_rewrite_incremental_fsync -%>yes<% else -%>no<% end -%>
+
+#####################################
+# Extra cofnig paramaters.
+<% unless @extra_config_params.empty? -%>
+<% [@extra_config_params].flatten.each do |param| -%>
+<%= param %>
+<% end -%>
+<% end -%>
