--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -21,3 +21,12 @@ sentinel client-reconfig-script <%= @master_name %> <%= @client_reconfig_script 
 <% end -%>
 
 logfile <%= @log_file %>
+
+#####################################
+# Extra cofnig paramaters.
+<% unless @extra_config_params.empty? -%>
+<% [@extra_config_params].flatten.each do |param| -%>
+<%= param %>       
+<% end -%>
+<% end -%>
+
