--- a/templates/redis.conf.2.8.erb
+++ b/templates/redis.conf.2.8.erb
@@ -741,7 +741,7 @@ aof-rewrite-incremental-fsync <% if @aof_rewrite_incremental_fsync -%>yes<% else
 
 #####################################
 # Extra cofnig paramaters.
-<% unless @extra_config_params.empty? -%>
+<% if @extra_config_params -%>
 <% [@extra_config_params].flatten.each do |param| -%>
 <%= param %>
 <% end -%>
