--- a/templates/redis.conf.2.4.10.erb
+++ b/templates/redis.conf.2.4.10.erb
@@ -506,7 +506,7 @@ include <%= @extra_config_file %>
 
 #####################################
 # Extra cofnig paramaters.
-<% unless @extra_config_params.empty? -%>
+<% if @extra_config_params -%>
 <% [@extra_config_params].flatten.each do |param| -%>
 <%= param %>
 <% end -%>
